--- a/index.html
+++ b/index.html
@@ -2,144 +2,93 @@
 <html lang="he">
 <head>
 <meta charset="UTF-8">
-<title>Football Netanya</title>
+<title>הזמנה רשמית | כדורגל נתניה</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:Arial,sans-serif;
-  background:#f4f6f8;
-  color:#222;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #e9eef3;
 }
 
-/* HEADER */
-header{
-  background:#fff;
-  border-bottom:1px solid #ddd;
-  padding:15px 25px;
-  display:flex;
-  justify-content:space-between;
-  align-items:flex-start;
+header {
+  background: #0b2a5b;
+  color: white;
+  padding: 15px 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.brand{
-  display:flex;
-  flex-direction:column;
-  gap:8px;
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.brand-top{
-  display:flex;
-  align-items:center;
-  gap:10px;
+.brand span {
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.logo{
-  width:42px;
-  height:42px;
-  background:#0b6623;
-  color:#fff;
-  font-weight:bold;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius:6px;
+.language select {
+  padding: 4px;
+  font-size: 13px;
+  color: black;
 }
 
-.company{
-  font-size:18px;
-  font-weight:bold;
+.main {
+  max-width: 800px;
+  margin: 50px auto;
+  background: white;
+  padding: 40px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.15);
 }
 
-.brand button{
-  width:140px;
-  padding:7px;
-  border:none;
-  background:#e6e6e6;
-  border-radius:6px;
-  cursor:pointer;
+h1 {
+  color: #0b2a5b;
 }
 
-/* LANG */
-.lang select{
-  font-size:12px;
-  color:black;
+.buttons {
+  margin-top: 30px;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
 }
 
-/* MAIN */
-main{
-  max-width:800px;
-  margin:40px auto;
-  background:#fff;
-  border:1px solid #ddd;
-  border-radius:10px;
-  padding:30px;
+button {
+  padding: 12px 20px;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
-.confirm{
-  margin-top:25px;
-  padding:14px 30px;
-  font-size:16px;
-  background:#0b6623;
-  color:white;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
+.confirm {
+  background: #0b2a5b;
+  color: white;
 }
 
-.info{
-  margin-top:15px;
-  display:inline-block;
-  text-decoration:none;
-  color:#0b6623;
-  font-weight:bold;
+.info {
+  background: #e0e0e0;
 }
 
-.meta{
-  margin-top:15px;
-  font-size:13px;
-  color:#555;
+.contact {
+  background: #f5f5f5;
 }
 
-/* LOADING + MODAL */
-.modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  display:none;
-  align-items:center;
-  justify-content:center;
+#overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 18px;
+  flex-direction: column;
 }
-
-.box{
-  background:white;
-  padding:25px;
-  border-radius:8px;
-  text-align:center;
-  width:280px;
-}
-
-.loader{
-  border:4px solid #ddd;
-  border-top:4px solid #0b6623;
-  border-radius:50%;
-  width:35px;
-  height:35px;
-  margin:0 auto 15px;
-  animation:spin 1s linear infinite;
-}
-
-@keyframes spin{to{transform:rotate(360deg)}}
-
-footer{
-  margin:40px 0 20px;
-  text-align:center;
-  font-size:12px;
-  color:#777;
-}
-
-.rtl{direction:rtl;text-align:right}
 </style>
 </head>
 
@@ -147,15 +96,11 @@ footer{
 
 <header>
   <div class="brand">
-    <div class="brand-top">
-      <div class="logo">FN</div>
-      <div class="company" id="company">כדורגל נתניה</div>
-    </div>
-    <button id="contact"></button>
+    ⚽ <span>כדורגל נתניה</span>
   </div>
 
-  <div class="lang">
-    <select id="lang">
+  <div class="language">
+    <select onchange="changeLang(this.value)">
       <option value="he">עברית</option>
       <option value="en">English</option>
       <option value="fr">Français</option>
@@ -164,82 +109,81 @@ footer{
   </div>
 </header>
 
-<main id="card">
-  <h1 id="title"></h1>
-  <p id="line1"></p>
-  <p id="line2"></p>
+<div class="main" id="content">
+  <h1>הזמנה לאירוע כדורגל מיוחד</h1>
+  <p>
+  נבחרת להשתתף באירוע ייחודי של כדורגל נתניה.
+  מספר המקומות מוגבל וההשתתפות מותנית באישור מוקדם.
+  </p>
 
-  <button class="confirm" id="confirm"></button><br>
-  <a class="info" href="info.html" id="info">ℹ️ מידע נוסף</a>
-
-  <div class="meta" id="meta"></div>
-</main>
-
-<footer id="foot"></footer>
-
-<div class="modal" id="modal">
-  <div class="box">
-    <div id="modalContent"></div>
-    <button onclick="closeModal()">OK</button>
+  <div class="buttons">
+    <button class="confirm" onclick="playSound()">אישור השתתפות</button>
+    <button class="info" onclick="location.href='info.html'">ℹ️ מידע נוסף</button>
+    <button class="contact" onclick="contact()">צור קשר</button>
   </div>
 </div>
 
-<audio id="audio" src="ston.mp3"></audio>
+<div id="overlay">
+  <div id="overlayText">טוען...</div>
+</div>
+
+<audio id="sound" src="ston.mp3"></audio>
 
 <script>
-const audio=document.getElementById("audio");
-const modal=document.getElementById("modal");
-const modalContent=document.getElementById("modalContent");
-
-const els={
-  card:document.getElementById("card"),
-  title:document.getElementById("title"),
-  line1:document.getElementById("line1"),
-  line2:document.getElementById("line2"),
-  meta:document.getElementById("meta"),
-  confirm:document.getElementById("confirm"),
-  contact:document.getElementById("contact"),
-  foot:document.getElementById("foot"),
-  info:document.getElementById("info")
-};
-
-const t={
-he:{rtl:true,title:"הזמנה רשמית לאירוע כדורגל",l1:"הנך מוזמן להשתתף באירוע כדורגל ייחודי המאורגן על ידי גוף מקצועי.",l2:"נא לאשר הגעה לצורך קבלת פרטי כניסה.",meta:"מיקום: נתניה • אירוע סגור למוזמנים בלבד",confirm:"אישור השתתפות",contact:"צור קשר",foot:"© כדורגל נתניה • כל הזכויות שמורות",info:"ℹ️ מידע נוסף",load:"טוען נתונים…",err:"שגיאה זמנית. אנא נסה שוב מאוחר יותר."},
-en:{rtl:false,title:"Official Football Event Invitation",l1:"You are invited to attend a professionally organized football event.",l2:"Please confirm attendance to receive access details.",meta:"Location: Netanya • Invitation Only",confirm:"Confirm Attendance",contact:"Contact Us",foot:"© Football Netanya • All rights reserved",info:"ℹ️ More information",load:"Loading request…",err:"Temporary error. Please try again later."},
-fr:{rtl:false,title:"Invitation Officielle à un Événement de Football",l1:"Vous êtes invité à un événement de football professionnel.",l2:"Veuillez confirmer votre présence pour recevoir les détails.",meta:"Lieu : Netanya • Sur invitation",confirm:"Confirmer la participation",contact:"Nous contacter",foot:"© Football Netanya • Tous droits réservés",info:"ℹ️ Plus d'informations",load:"Chargement…",err:"Erreur temporaire. Veuillez réessayer plus tard."},
-ar:{rtl:true,title:"دعوة رسمية لحدث كرة قدم",l1:"أنت مدعو لحضور حدث كرة قدم منظم من قبل جهة محترفة.",l2:"يرجى تأكيد الحضور للحصول على تفاصيل الدخول.",meta:"الموقع: نتانيا • الدخول بدعوة",confirm:"تأكيد الحضور",contact:"اتصل بنا",foot:"© كرة قدم نتانيا • جميع الحقوق محفوظة",info:"ℹ️ معلومات إضافية",load:"جارٍ التحميل…",err:"خطأ مؤقت. يرجى المحاولة لاحقاً."}
-};
-
-function applyLang(l){
-  const d=t[l];
-  els.title.textContent=d.title;
-  els.line1.textContent=d.l1;
-  els.line2.textContent=d.l2;
-  els.meta.textContent=d.meta;
-  els.confirm.textContent=d.confirm;
-  els.contact.textContent=d.contact;
-  els.foot.textContent=d.foot;
-  els.info.textContent=d.info;
-  els.card.classList.toggle("rtl",d.rtl);
+function playSound() {
+  document.getElementById("sound").play();
 }
 
-document.getElementById("lang").onchange=e=>applyLang(e.target.value);
-applyLang("he");
+function contact() {
+  const overlay = document.getElementById("overlay");
+  const text = document.getElementById("overlayText");
 
-els.confirm.onclick=()=>{
-  audio.currentTime=0;
-  audio.play();
+  overlay.style.display = "flex";
+  text.innerText = "מתחבר לשרתים...";
+
+  setTimeout(() => {
+    text.innerText = "שגיאה זמנית. נסה שוב מאוחר יותר.";
+  }, 2500);
+
+  setTimeout(() => {
+    overlay.style.display = "none";
+  }, 5000);
+}
+
+const translations = {
+  en: `
+    <h1>Official Football Event Invitation</h1>
+    <p>You have been selected to participate in a special football event.</p>
+    <div class="buttons">
+      <button class="confirm" onclick="playSound()">Confirm Participation</button>
+      <button class="info" onclick="location.href='info.html'">ℹ️ More Information</button>
+      <button class="contact" onclick="contact()">Contact Us</button>
+    </div>
+  `,
+  fr: `
+    <h1>Invitation officielle à un événement de football</h1>
+    <p>Vous avez été sélectionné pour participer à un événement spécial.</p>
+    <div class="buttons">
+      <button class="confirm" onclick="playSound()">Confirmer</button>
+      <button class="info" onclick="location.href='info.html'">ℹ️ Plus d'informations</button>
+      <button class="contact" onclick="contact()">Contact</button>
+    </div>
+  `,
+  ar: `
+    <h1>دعوة رسمية لحدث كرة قدم</h1>
+    <p>تم اختيارك للمشاركة في حدث خاص.</p>
+    <div class="buttons">
+      <button class="confirm" onclick="playSound()">تأكيد المشاركة</button>
+      <button class="info" onclick="location.href='info.html'">ℹ️ معلومات إضافية</button>
+      <button class="contact" onclick="contact()">اتصل بنا</button>
+    </div>
+  `
 };
 
-els.contact.onclick=()=>{
-  modal.style.display="flex";
-  modalContent.innerHTML=`<div class="loader"></div><div>${t[document.getElementById("lang").value].load}</div>`;
-  setTimeout(()=>{
-    modalContent.textContent=t[document.getElementById("lang").value].err;
-  },2000);
-};
-
-function closeModal(){modal.style.display="none";}
+function changeLang(lang) {
+  if (lang === "he") location.reload();
+  else document.getElementById("content").innerHTML = translations[lang];
+}
 </script>
 
 </body>
