--- a/info.html
+++ b/info.html
@@ -5,66 +5,21 @@
 <title>מידע נוסף | כדורגל נתניה</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f2f2f2;
-  color: #111;
-}
-
-header {
-  background: #0b2a5b;
-  color: white;
-  padding: 15px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.language {
-  font-size: 14px;
-}
-
-.language select {
-  padding: 4px;
-}
-
-.container {
-  max-width: 900px;
-  margin: 30px auto;
-  background: white;
-  padding: 30px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  line-height: 1.7;
-}
-
-h1 {
-  color: #0b2a5b;
-}
-
-h2 {
-  margin-top: 30px;
-  color: #0b2a5b;
-}
-
-.footer {
-  text-align: center;
-  font-size: 13px;
-  color: #666;
-  padding: 20px;
-}
+body{margin:0;font-family:Arial,sans-serif;background:#eef2f6;color:#111}
+header{background:#0b2a5b;color:#fff;padding:15px 25px;display:flex;justify-content:space-between;align-items:center}
+.brand{font-size:20px;font-weight:bold}
+.language select{padding:4px;font-size:13px;color:#000}
+.container{max-width:900px;margin:40px auto;background:#fff;padding:40px;box-shadow:0 0 20px rgba(0,0,0,.15);line-height:1.9}
+h1,h2,h3{color:#0b2a5b}
+.back{display:inline-flex;align-items:center;gap:8px;margin-bottom:20px;color:#0b2a5b;text-decoration:none;font-weight:bold}
+.footer{text-align:center;font-size:13px;color:#666;padding:25px}
 </style>
 </head>
 
 <body>
 
 <header>
-  <div class="logo">⚽ כדורגל נתניה</div>
+  <div class="brand">⚽ כדורגל נתניה</div>
   <div class="language">
     <select onchange="changeLang(this.value)">
       <option value="he">עברית</option>
@@ -76,73 +31,117 @@ h2 {
 </header>
 
 <div class="container" id="content">
-  <h1>ברוך הבא לתוכנית ההזמנות המיוחדות</h1>
 
-  <p>
-  כדורגל נתניה שמחה להזמינך להשתתף ביוזמה ייחודית ויוצאת דופן, המיועדת לאנשים אשר היו מעורבים בעבר בפעילות הקשורה לכדורגל.
-  </p>
+<a class="back" href="index.html">← חזרה להזמנה</a>
 
-  <h2>מהי התוכנית?</h2>
-  <p>
-  מדובר באירוע סגור, שאינו פתוח לציבור הרחב, הכולל משחק מיוחד וחשיפה מקצועית. מספר המקומות מוגבל וההשתתפות מותנית באישור מוקדם.
-  </p>
+<h1>תוכנית ההזמנות המיוחדות של כדורגל נתניה</h1>
 
-  <h2>כיצד זה עובד?</h2>
-  <p>
-  המערכת שלנו מבצעת בחירה אוטומטית מתוך מאגר משתתפים קיימים, על בסיס פעילות קודמת, עניין מוכח והתאמה כללית לאירוע.
-  </p>
+<p>
+כדורגל נתניה מפעילה לאורך השנה תוכנית הזמנות ייחודית, שמטרתה לאתר משתתפים בעלי
+זיקה מוכחת לעולם הכדורגל ולהעניק להם הזדמנות להשתתף באירועים סגורים ובלעדיים.
+</p>
 
-  <h2>למה נבחרת?</h2>
-  <p>
-  נמצאה התאמה בין הפרופיל שלך לבין הקריטריונים של האירוע הקרוב. הבחירה אינה אקראית ואינה פתוחה להרשמה חופשית.
-  </p>
+<h2>רקע כללי</h2>
+<p>
+התוכנית הוקמה כחלק מפעילות קהילתית ומקצועית רחבה יותר, במטרה לחזק את הקשר בין
+המערכת המקצועית, הקהילה והמשתתפים עצמם. האירועים אינם פתוחים לקהל הרחב.
+</p>
 
-  <p>
-  במידה ואישרת השתתפות, פרטים נוספים יימסרו בהמשך.
-  </p>
+<h2>מה כולל האירוע?</h2>
+<ul>
+<li>משחק כדורגל בפורמט ייחודי</li>
+<li>ליווי מקצועי ואירגוני</li>
+<li>נוכחות צוותים רלוונטיים</li>
+<li>חוויה שאינה חלק ממסגרת רגילה</li>
+</ul>
+
+<h2>כיצד מתבצעת הבחירה?</h2>
+<p>
+הבחירה נעשית באמצעות מערכת אוטומטית המבוססת על נתונים קיימים, כגון השתתפות קודמת,
+מעורבות בפעילות ספורטיבית ורישומים היסטוריים.
+</p>
+
+<h2>מדוע קיבלת הזמנה?</h2>
+<p>
+נמצאה התאמה בין הפרופיל שלך לבין הקריטריונים של האירוע הקרוב. אין מדובר בהגרלה
+או בהרשמה פתוחה.
+</p>
+
+<h2>לאחר אישור השתתפות</h2>
+<p>
+לאחר האישור, יישלחו פרטים נוספים הכוללים מיקום, זמני הגעה והנחיות כלליות.
+</p>
+
+<h3>הבהרות</h3>
+<ul>
+<li>מספר המקומות מוגבל</li>
+<li>האירוע מיועד למוזמנים בלבד</li>
+<li>אין להעביר הזמנה לאחר</li>
+<li>ייתכנו שינויים בהתאם לשיקולים מקצועיים</li>
+</ul>
+
 </div>
 
-<div class="footer">
-  © 2026 Netanya Football Organization
-</div>
+<div class="footer">© 2026 Netanya Football Organization</div>
 
 <script>
 const translations = {
-  en: `
-    <h1>Welcome to the Special Invitation Program</h1>
-    <p>Netanya Football is pleased to invite you to a unique football-related initiative.</p>
-    <h2>What is this program?</h2>
-    <p>This is a closed event with limited availability.</p>
-    <h2>How does it work?</h2>
-    <p>Participants are selected automatically based on prior involvement.</p>
-    <h2>Why were you selected?</h2>
-    <p>Your profile matched the event criteria.</p>
-  `,
-  fr: `
-    <h1>Bienvenue au programme d'invitation spéciale</h1>
-    <p>Netanya Football vous invite à un événement unique.</p>
-    <h2>Qu'est-ce que ce programme ?</h2>
-    <p>Événement fermé avec places limitées.</p>
-    <h2>Comment ça marche ?</h2>
-    <p>Sélection automatique selon l’activité passée.</p>
-    <h2>Pourquoi avez-vous été choisi ?</h2>
-    <p>Votre profil correspond aux critères.</p>
-  `,
-  ar: `
-    <h1>مرحبًا بكم في برنامج الدعوة الخاصة</h1>
-    <p>يسر كرة قدم نتانيا دعوتكم إلى حدث مميز.</p>
-    <h2>ما هو هذا البرنامج؟</h2>
-    <p>حدث مغلق بعدد محدود من المشاركين.</p>
-    <h2>كيف يعمل؟</h2>
-    <p>يتم الاختيار تلقائيًا بناءً على النشاط السابق.</p>
-    <h2>لماذا تم اختيارك؟</h2>
-    <p>تمت مطابقة ملفك مع معايير الحدث.</p>
-  `
+en: `
+<a class="back" href="index.html">← Back to invitation</a>
+<h1>Netanya Football – Special Invitation Program</h1>
+<p>Netanya Football operates a selective invitation program throughout the year, designed to identify individuals with proven involvement in football-related activities.</p>
+<h2>General background</h2>
+<p>The program was created as part of a broader professional and community initiative and is not open to the general public.</p>
+<h2>What does the event include?</h2>
+<ul><li>Special-format football match</li><li>Professional and organizational support</li><li>Relevant staff presence</li><li>A unique, non-standard experience</li></ul>
+<h2>How does the selection work?</h2>
+<p>Selection is carried out through an automated system based on existing data such as previous participation and involvement.</p>
+<h2>Why were you invited?</h2>
+<p>Your profile matched the criteria of an upcoming event. This is not a lottery or open registration.</p>
+<h2>After confirmation</h2>
+<p>Additional details including location and schedule will be sent after confirmation.</p>
+<h3>Important notes</h3>
+<ul><li>Limited availability</li><li>Invitation-only event</li><li>Invitations are non-transferable</li><li>Changes may occur</li></ul>
+`,
+fr: `
+<a class="back" href="index.html">← Retour à l'invitation</a>
+<h1>Programme d'invitation spéciale – Netanya Football</h1>
+<p>Netanya Football organise un programme sélectif destiné aux personnes ayant une implication avérée dans le football.</p>
+<h2>Contexte général</h2>
+<p>Ce programme fait partie d’une initiative communautaire et professionnelle plus large et n’est pas ouvert au public.</p>
+<h2>Contenu de l’événement</h2>
+<ul><li>Match de football à format spécial</li><li>Encadrement professionnel</li><li>Présence d’équipes dédiées</li><li>Expérience exclusive</li></ul>
+<h2>Processus de sélection</h2>
+<p>La sélection est effectuée automatiquement sur la base de données existantes.</p>
+<h2>Pourquoi avez-vous été invité ?</h2>
+<p>Votre profil correspond aux critères de l’événement à venir.</p>
+<h2>Après confirmation</h2>
+<p>Les détails pratiques seront communiqués ultérieurement.</p>
+<h3>Informations importantes</h3>
+<ul><li>Places limitées</li><li>Événement sur invitation uniquement</li><li>Invitation non transférable</li><li>Modifications possibles</li></ul>
+`,
+ar: `
+<a class="back" href="index.html">← العودة إلى الدعوة</a>
+<h1>برنامج الدعوة الخاصة – كرة قدم نتانيا</h1>
+<p>تدير كرة قدم نتانيا برنامج دعوات انتقائي على مدار العام مخصص للأشخاص ذوي الصلة المثبتة بعالم كرة القدم.</p>
+<h2>الخلفية العامة</h2>
+<p>تم إنشاء البرنامج ضمن مبادرة مهنية ومجتمعية أوسع وهو غير متاح للجمهور العام.</p>
+<h2>ماذا يشمل الحدث؟</h2>
+<ul><li>مباراة كرة قدم بصيغة خاصة</li><li>إشراف وتنظيم مهني</li><li>حضور طواقم مختصة</li><li>تجربة فريدة وغير تقليدية</li></ul>
+<h2>كيف تتم عملية الاختيار؟</h2>
+<p>يتم الاختيار تلقائيًا بناءً على بيانات المشاركة السابقة والانخراط في النشاطات.</p>
+<h2>لماذا تمت دعوتك؟</h2>
+<p>تمت مطابقة ملفك مع معايير الحدث القادم، ولا يعتبر ذلك تسجيلًا مفتوحًا.</p>
+<h2>بعد تأكيد المشاركة</h2>
+<p>سيتم إرسال تفاصيل إضافية حول الموقع والتوقيت لاحقًا.</p>
+<h3>ملاحظات هامة</h3>
+<ul><li>عدد الأماكن محدود</li><li>الحدث مخصص للمدعوين فقط</li><li>لا يمكن نقل الدعوة</li><li>قد تطرأ تغييرات</li></ul>
+`
 };
 
-function changeLang(lang) {
-  if (lang === "he") location.reload();
-  else document.getElementById("content").innerHTML = translations[lang];
+function changeLang(l){
+  if(l==="he") location.reload();
+  else document.getElementById("content").innerHTML = translations[l];
 }
 </script>
 
